syntax = "proto3";

option csharp_namespace = "GrpcClient";

package math;

// The greeting service definition.
service Math {
  // Sends a greeting
  rpc Addition (MathRequest) returns (MathReply);
  rpc Increment (IncrementRequest) returns (stream IncrementResponse);
}

// The request message containing the user's name.
message MathRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

// The response message containing the greetings.
message MathReply {
  int32 summary = 1;
}

message IncrementRequest{
  int32 start = 1;
  int32 limit = 2;
}

message IncrementResponse{
  int32 result = 1;
}
